--- a/src/components/BurgerPreview/Burger/Burger.css
+++ b/src/components/BurgerPreview/Burger/Burger.css
@@ -2,7 +2,7 @@
   width: 100%;
   margin: auto;
   height: 250px;
-  overflow: auto;
+  overflow: visible;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
@@ -10,7 +10,6 @@
 
 @media (min-width: 1000px) and (min-height: 700px) {
   .Burger {
-    width: 700px;
-    height: 600px;
+    height: 400px;
   }
 }
